--- a/Dotaciones la fortuna/public/assets/sass/main.css
+++ b/Dotaciones la fortuna/public/assets/sass/main.css
@@ -138,13 +138,13 @@ em, i {
 }
 
 a {
-  color: #1a5fcd;
+  color: inherit;
   border-bottom: solid 1px rgba(128, 128, 128, 0.15);
   text-decoration: none;
   transition: background-color 0.35s ease-in-out, color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
 }
 a:hover {
-  color: #1a5fcd;
+  color: #ef8376;
   border-bottom-color: transparent;
 }
 
@@ -1612,7 +1612,7 @@ button,
 .button {
   position: relative;
   display: inline-block;
-  background: #1a5fcd;
+  background: #df7366;
   color: #fff;
   text-align: center;
   border-radius: 0.5em;
@@ -1630,7 +1630,7 @@ input[type=reset]:hover,
 button:hover,
 .button:hover {
   color: #fff;
-  background: #1a5fcd;
+  background: #ef8376;
 }
 input[type=button].alt,
 input[type=submit].alt,
@@ -1808,7 +1808,6 @@ body.homepage.is-preload #header:after {
   padding: 1.5em 0 1.5em 0;
   z-index: 1;
   overflow: hidden;
-  background-color: inherit;
 }
 #nav > ul {
   line-height: 0px;
@@ -1843,7 +1842,6 @@ body.homepage.is-preload #header:after {
   margin: -9px 0.5em 0 0.5em;
   border-radius: 0.5em;
   padding: 0.85em;
-  background-color: #fff;
   border: solid 1px transparent;
   transition: color 0.35s ease-in-out, border-color 0.35s ease-in-out;
 }
@@ -1852,13 +1850,10 @@ body.homepage.is-preload #header:after {
 }
 #nav > ul > li > a, #nav > ul > li > span {
   display: block;
-  color: #1a5fcd;
-  font-size: 1.3rem;
-  font-weight: 700;
+  color: inherit;
   text-decoration: none;
   border: 0;
   outline: 0;
-  background-color: #fff;
 }
 #nav > ul > li > ul {
   display: none;
