--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -170,13 +170,13 @@
 	}
 
 	a {
-		color: inherit;
+		color: #1a5fcd;
 		border-bottom: solid 1px rgba(128, 128, 128, 0.15);
 		text-decoration: none;
 		@include vendor('transition', ('background-color 0.35s ease-in-out', 'color 0.35s ease-in-out', 'border-bottom-color 0.35s ease-in-out'));
 
 		&:hover {
-			color: #ef8376;
+			color: #1a5fcd;
 			border-bottom-color: transparent;
 		}
 	}
@@ -615,7 +615,7 @@
 	.button {
 		position: relative;
 		display: inline-block;
-		background: #df7366;
+		background: #1a5fcd;
 		color: #fff;
 		text-align: center;
 		border-radius: 0.5em;
@@ -629,7 +629,7 @@
 
 		&:hover {
 			color: #fff;
-			background: #ef8376;
+			background: #1a5fcd;
 		}
 
 		&.alt {
@@ -831,6 +831,7 @@
 		padding: 1.5em 0 1.5em 0;
 		z-index: 1;
 		overflow: hidden;
+		background-color: inherit;
 
 		> ul {
 			line-height: 0px;
@@ -868,6 +869,7 @@
 				margin: -9px 0.5em 0 0.5em;
 				border-radius: 0.5em;
 				padding: 0.85em;
+				background-color: #fff;
 				border: solid 1px transparent;
 				@include vendor('transition', ('color 0.35s ease-in-out', 'border-color 0.35s ease-in-out'));
 
@@ -877,10 +879,13 @@
 
 				> a, > span {
 					display: block;
-					color: inherit;
+					color: #1a5fcd;
+					font-size: 1.3rem;
+					font-weight: 700;
 					text-decoration: none;
 					border: 0;
 					outline: 0;
+					background-color: #fff;
 				}
 
 				> ul {
