--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2453,3 +2453,20 @@ body.homepage.is-preload #header:after {
     margin-bottom: 2em;
   }
 }/*# sourceMappingURL=main.css.map */
+.whatsapp {
+  position:fixed;
+  width:60px;
+  height:60px;
+  bottom:40px;
+  right:40px;
+  background-color:#25d366;
+  color:#FFF;
+  border-radius:50px;
+  text-align:center;
+  font-size:30px;
+  z-index:100;
+}
+
+.whatsapp-icon {
+  margin-top:13px;
+}
